--- a/como_jugar.html
+++ b/como_jugar.html
@@ -12,16 +12,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body id="body">
-    <header><h1>COMO JUGAR?</h1></header>
-    <div>
+    <header>
+        <h1>COMO JUGAR?</h1>
+    </header>
+    <div id="explicativo">
         <h3>Se usan los números del 1 al 9</h3>
-        <p>Sudoku se juega en una cuadrícula de 9 x 9 espacios. Dentro de las filas y columnas hay 9 "cuadrados" (compuestos
+        <p>
+            Sudoku se juega en una cuadrícula de 9 x 9 espacios. Dentro de las filas y columnas hay 9 "cuadrados" (compuestos
             de 3 x 3 espacios). Cada fila, columna y cuadrado (9 espacios cada uno) debe completarse con los números del 1
             al 9, sin repetir ningún número dentro de la fila, columna o cuadrado. ¿Suena complicado? Como puede ver en la
             imagen de abajo, cada cuadrícula de Sudoku viene con algunos espacios ya completados; cuantos más espacios se
-            llenen, más fácil será el juego. Los rompecabezas Sudoku más difíciles tienen muy pocos espacios ocupados.</p>
+            llenen, más fácil será el juego. Los rompecabezas Sudoku más difíciles tienen muy pocos espacios ocupados.
+        </p>
         <h3>No repita ningún número</h3>
         <img src="imagenes/como_jugar1.jpg" alt="Tablero de Ejemplo">
         <p>
@@ -45,9 +52,10 @@
         </p>
         <h3>Utilice el proceso de eliminación</h3>
         <p>
-            ¿Qué queremos decir con el uso del "proceso de eliminación" para jugar Sudoku? Aquí tenemos un ejemplo. En la
-            cuadrícula de Sudoku (que se muestra a continuación), a la columna vertical de la izquierda (marcada con un
-            círculo en azul) le faltan solo algunos números: 1, 5 y 6.
+            ¿Qué queremos decir con el uso del "proceso de eliminación" para jugar Sudoku?
+        </p>
+        <p>
+            Aquí tenemos un ejemplo. En la cuadrícula de Sudoku (que se muestra a continuación), a la columna vertical de la izquierda (marcada con un  círculo en azul) le faltan solo algunos números: 1, 5 y 6.
             Una forma de averiguar qué números pueden ir en cada espacio es usar el "proceso de eliminación" comprobando qué
             otros números ya están incluidos dentro de cada cuadrado, ya que no puede haber duplicación de los números del 1
             al 9 dentro de cada cuadrado (o fila o columna).
@@ -68,7 +76,7 @@
         </p>
     </div>
 
-    <div>
+    <div id="video">
         <h3>Video explicativo:</h3>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/-RluC5dIVlE" title="YouTube video player"
                 frameborder="0"
