--- a/jugar.html
+++ b/jugar.html
@@ -21,9 +21,9 @@
     <form>
         <p id="formulario_dificultad">
             <label for="dificultad"><b>Dificultad: </b></label>
-            <input type="radio" name="dificultad" class="input" value="facil" id="radio_facil" onclick="Dificultad(this.value)"> <label class="formulario_dificultad" for="radio_facil">Facil</label>
-            <input type="radio" name="dificultad" class="input" value="normal" id="radio_normal" onclick="Dificultad(this.value)" checked> <label class="formulario_dificultad" for="radio_normal">Normal</label>
-            <input type="radio" name="dificultad" class="input" value="dificil" id="radio_dificil" onclick="Dificultad(this.value)"> <label class="formulario_dificultad" for="radio_dificil">Dificil</label>
+            <input type="radio" name="dificultad" class="input" value="facil" id="radio_facil" onclick="Dificultad()"> <label class="formulario_dificultad" for="radio_facil">Facil</label>
+            <input type="radio" name="dificultad" class="input" value="normal" id="radio_normal" onclick="Dificultad()" checked> <label class="formulario_dificultad" for="radio_normal">Normal</label>
+            <input type="radio" name="dificultad" class="input" value="dificil" id="radio_dificil" onclick="Dificultad()"> <label class="formulario_dificultad" for="radio_dificil">Dificil</label>
         </p>
         <p id="formulario_tiempo" class="p_tiempo_vidas">
             <label for="tiempo"><b>Tiempo: </b></label>
