--- a/jugar-2.html
+++ b/jugar-2.html
@@ -38,117 +38,105 @@
     <div id="borde_tablero" class="tablero">
         <table id="tablero" align="center">
             <tr id="f1" class="fila">
-                <td><input class="celda" disabled></td>
-                <td class="borde_1"><input class="celda" disabled></td>
-                <td class="borde_1_derecho"><input class="celda" disabled></td>
-                <td class="borde_1"><input class="celda" disabled></td>
-                <td class="borde_1"><input class="celda" disabled></td>
-                <td class="borde_1_derecho"><input class="celda" disabled></td>
-                <td class="borde_1"><input class="celda" disabled></td>
-                <td class="borde_1"><input class="celda" disabled></td>
-                <td><input id="9" class="celda" disabled></td>
+                <td><input id="1" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_1"><input id="2" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_1_derecho"><input id="3" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_1"><input id="4" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_1"><input id="5" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_1_derecho"><input id="6" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_1"><input id="7" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_1"><input id="8" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td><input id="9" class="celda" onchange="Tablero(this.id,this.value)"></td>
             </tr>
             <tr id="f2" class="fila">
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde_derecho"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde_derecho"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
+                <td class="borde"><input id="10" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="11" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_derecho"><input id="12" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="13" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="14" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_derecho"><input id="15" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="16" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="17" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="18" class="celda" onchange="Tablero(this.id,this.value)"></td>
             </tr>
             <tr id="f3" class="borde_fila">
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde_derecho"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde_derecho"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
+                <td class="borde"><input id="19" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="20" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_derecho"><input id="21" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="22" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="23" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_derecho"><input id="24" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="25" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="26" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="27" class="celda" onchange="Tablero(this.id,this.value)"></td>
             </tr>
             <tr id="f4" class="fila">
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde_derecho"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde_derecho"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
+                <td class="borde"><input id="28" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="29" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_derecho"><input id="30" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="31" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="32" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_derecho"><input id="33" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="34" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="35" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="36" class="celda" onchange="Tablero(this.id,this.value)"></td>
             </tr>
             <tr id="f5" class="fila">
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde_derecho"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde_derecho"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
+                <td class="borde"><input id="37" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="38" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_derecho"><input id="39" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="40" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="41" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_derecho"><input id="42" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="43" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="44" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="45" class="celda" onchange="Tablero(this.id,this.value)"></td>
             </tr>
             <tr id="f6" class="borde_fila">
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde_derecho"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde_derecho"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
+                <td class="borde"><input id="46" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="47" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_derecho"><input id="48" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="49" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="50" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_derecho"><input id="51" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="52" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="53" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="54" class="celda" onchange="Tablero(this.id,this.value)"></td>
             </tr>
             <tr id="f7" class="fila">
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde_derecho"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde_derecho"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
-                <td class="borde"><input class="celda" disabled></td>
+                <td class="borde"><input id="55" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="56" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_derecho"><input id="57" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="58" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="59" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_derecho"><input id="60" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="61" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="62" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="63" class="celda" onchange="Tablero(this.id,this.value)"></td>
             </tr>
             <tr id="f8" class="fila">
-                <td class="borde" id="c1f8"><input class="celda" disabled></td>
-                <td class="borde" id="c2f8"><input class="celda" disabled></td>
-                <td class="borde_derecho" id="c3f8"><input class="celda" disabled></td>
-                <td class="borde" id="c4f8"><input class="celda" disabled></td>
-                <td class="borde" id="c5f8"><input class="celda" disabled></td>
-                <td class="borde_derecho" id="c6f8"><input class="celda" disabled></td>
-                <td class="borde" id="c7f8"><input class="celda" disabled></td>
-                <td class="borde" id="c8f8"><input class="celda" disabled></td>
-                <td class="borde" id="c9f8"><input class="celda" disabled></td>
+                <td class="borde"><input id="64" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="65" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_derecho"><input id="66" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="67" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="68" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_derecho"><input id="69" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="70" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="71" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde"><input id="72" class="celda" onchange="Tablero(this.id,this.value)"></td>
             </tr>
             <tr id="f9" class="fila">
-                <td><input class="celda" disabled></td>
-                <td class="borde_2"><input class="celda" disabled></td>
-                <td class="borde_2_derecho"><input class="celda" disabled></td>
-                <td class="borde_2"><input class="celda" disabled></td>
-                <td class="borde_2"><input class="celda" disabled></td>
-                <td class="borde_2_derecho"><input class="celda" disabled></td>
-                <td class="borde_2"><input class="celda" disabled></td>
-                <td class="borde_2"><input class="celda" disabled></td>
-                <td><input class="celda" disabled></td>
+                <td><input id="" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_2"><input id="73" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_2_derecho"><input id="74" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_2"><input id="75" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_2"><input id="76" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_2_derecho"><input id="77" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_2"><input id="78" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td class="borde_2"><input id="79" class="celda" onchange="Tablero(this.id,this.value)"></td>
+                <td><input id="80" class="celda" onchange="Tablero(this.id,this.value)"></td>
             </tr>
         </table>
-    </div>
-
-    <div id="botones" class="tablero">
-        <button class="botonesTablero" onclick="Tablero(1)"><a class="a" href="">1</a></button>
-        <button class="botonesTablero" onclick="Tablero(2)"><a class="a" href="">2</a></button>
-        <button class="botonesTablero" onclick="Tablero(3)"><a class="a" href="">3</a></button>
-        <button class="botonesTablero" onclick="Tablero(4)"><a class="a" href="">4</a></button>
-        <button class="botonesTablero" onclick="Tablero(5)"><a class="a" href="">5</a></button>
-        <button class="botonesTablero" onclick="Tablero(6)"><a class="a" href="">6</a></button>
-        <button class="botonesTablero" onclick="Tablero(7)"><a class="a" href="">7</a></button>
-        <button class="botonesTablero" onclick="Tablero(8)"><a class="a" href="">8</a></button>
-        <button class="botonesTablero" onclick="Tablero(9)"><a class="a" href="">9</a></button>
     </div>
 </section>
 <br>
