Ids Repetidos Fuera

--- a/como_jugar.html
+++ b/como_jugar.html
@@ -85,8 +85,8 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
     <p>
-        <button id="botonComoJugar" class="boton"><a class="a" href="jugar.html">Ir a Jugar</a></button>
-        <button id="botonComoJugar" class="boton"><a class="a" href="index.html">Volver a Inicio</a></button>
+        <button id="botonSiguiente" class="boton"><a class="a" href="jugar.html">Ir a Jugar</a></button>
+        <button id="botonVolver" class="boton"><a class="a" href="index.html">Volver a Inicio</a></button>
     </p>
 </div>
 </body>
