--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 </header>
 <section>
     <p>
-        <button id="botonIndex" class="boton"><a class="aIndex" href="jugar.html">Jugar</a></button>
-        <button id="botonIndex" class="boton"><a class="aIndex" href="como_jugar.html">Como Jugar</a></button>
+        <button id="botonIndexJugar" class="boton"><a class="aIndex" href="jugar.html">Jugar</a></button>
+        <button id="botonIndexComoJugar" class="boton"><a class="aIndex" href="como_jugar.html">Como Jugar</a></button>
     </p>
 </section>
 </body>
