--- a/jugar-2.html
+++ b/jugar-2.html
@@ -141,8 +141,8 @@
 </section>
 <br>
 <div>
-    <button id="botonJugar_2" class="boton"><a class="a" href="jugar.html">Atras</a></button>
-    <button id="botonJugar_2" class="boton"><a class="a" href="index.html">Volver a Inicio</a></button>
+    <button id="botonAtras" class="boton"><a class="a" href="jugar.html">Atras</a></button>
+    <button id="botonInicio" class="boton"><a class="a" href="index.html">Volver a Inicio</a></button>
 </div>
 </body>
 </html>
