--- a/jugar.html
+++ b/jugar.html
@@ -21,36 +21,36 @@
 <div id="formulario" align="center">
     <form>
         <p id="formulario_dificultad">
-            <label for="dificultad"><b>Dificultad: </b></label>
+            <label for="formulario_dificultad"><b>Dificultad: </b></label>
             <input type="radio" name="dificultad" class="input" value="facil" id="radio_facil" onclick="Dificultad(this.value)"> <label class="formulario_dificultad" for="radio_facil">Facil</label>
             <input type="radio" name="dificultad" class="input" value="normal" id="radio_normal" onclick="Dificultad(this.value)" checked> <label class="formulario_dificultad" for="radio_normal">Normal</label>
             <input type="radio" name="dificultad" class="input" value="dificil" id="radio_dificil" onclick="Dificultad(this.value)"> <label class="formulario_dificultad" for="radio_dificil">Dificil</label>
         </p>
         <p id="formulario_tiempo" class="p_tiempo_vidas">
-            <label for="tiempo"><b>Tiempo: </b></label>
+            <label for="formulario_tiempo"><b>Tiempo: </b></label>
             <select name="tiempo" class="select_tiempo_vidas">
-                <option value="ilimitado"><label for="ilimitado">Ilimitado</label></option>
-                <option value="10_min"><label for="10_min">10 min</label></option>
-                <option value="15_min"><label for="15_min">15 min</label></option>
-                <option value="20_min"><label for="20_min">20 min</label></option>
-                <option value="25_min"><label for="25_min">25 min</label></option>
+                <option value="ilimitado"><label for="formulario_tiempo">Ilimitado</label></option>
+                <option value="10_min"><label for="formulario_tiempo">10 min</label></option>
+                <option value="15_min"><label for="formulario_tiempo">15 min</label></option>
+                <option value="20_min"><label for="formulario_tiempo">20 min</label></option>
+                <option value="25_min"><label for="formulario_tiempo">25 min</label></option>
             </select>
         </p>
         <p id="formulario_vidas" class="p_tiempo_vidas">
-            <label for="vidas"><b>Vidas: </b></label>
+            <label for="formulario_vidas"><b>Vidas: </b></label>
             <select name="vidas" class="select_tiempo_vidas">
-                <option value="ilimitado"><label for="ilimitado">Ilimitado</label></option>
-                <option value="5"><label for="5">5</label></option>
-                <option value="10"><label for="10">10</label></option>
-                <option value="15"><label for="15">15</label></option>
+                <option value="ilimitado"><label for="formulario_vidas">Ilimitado</label></option>
+                <option value="5"><label for="formulario_vidas">5</label></option>
+                <option value="10"><label for="formulario_vidas">10</label></option>
+                <option value="15"><label for="formulario_vidas">15</label></option>
             </select>
         </p>
     </form>
 </div>
 <div>
     <p>
-        <button id="botonJugar" class="boton"><a class="a" href="jugar-2.html">Siguiente</a></button>
-        <button id="botonJugar" class="boton"><a class="a" href="index.html">Volver a Inicio</a></button>
+        <button id="botonSiguiente" class="boton"><a class="a" href="jugar-2.html">Siguiente</a></button>
+        <button id="botonVolver" class="boton"><a class="a" href="index.html">Volver a Inicio</a></button>
     </p>
 </div>
 </body>
