--- a/jugar.html
+++ b/jugar.html
@@ -22,27 +22,27 @@
     <form>
         <p id="formulario_dificultad">
             <label for="formulario_dificultad"><b>Dificultad: </b></label>
-            <input type="radio" name="dificultad" class="input" value="facil" id="radio_facil" onclick="Dificultad(this.value)"> <label class="formulario_dificultad" for="radio_facil">Facil</label>
-            <input type="radio" name="dificultad" class="input" value="normal" id="radio_normal" onclick="Dificultad(this.value)" checked> <label class="formulario_dificultad" for="radio_normal">Normal</label>
-            <input type="radio" name="dificultad" class="input" value="dificil" id="radio_dificil" onclick="Dificultad(this.value)"> <label class="formulario_dificultad" for="radio_dificil">Dificil</label>
+            <input type="radio" name="dificultad" class="input" value="facil" id="dif-1" onclick="Dificultad(this.value)"> <label class="formulario_dificultad" for="dif-1">Facil</label>
+            <input type="radio" name="dificultad" class="input" value="normal" id="dif-2" onclick="Dificultad(this.value)" checked> <label class="formulario_dificultad" for="dif-2">Normal</label>
+            <input type="radio" name="dificultad" class="input" value="dificil" id="dif-3" onclick="Dificultad(this.value)"> <label class="formulario_dificultad" for="dif-3">Dificil</label>
         </p>
         <p id="formulario_tiempo" class="p_tiempo_vidas">
             <label for="formulario_tiempo"><b>Tiempo: </b></label>
             <select name="tiempo" class="select_tiempo_vidas">
-                <option value="ilimitado"><label for="formulario_tiempo">Ilimitado</label></option>
-                <option value="10_min"><label for="formulario_tiempo">10 min</label></option>
-                <option value="15_min"><label for="formulario_tiempo">15 min</label></option>
-                <option value="20_min"><label for="formulario_tiempo">20 min</label></option>
-                <option value="25_min"><label for="formulario_tiempo">25 min</label></option>
+                <option id="time-1" value="ilimitado"><label for="formulario_tiempo">Ilimitado</label></option>
+                <option id="time-2" value="10_min"><label for="formulario_tiempo">10 min</label></option>
+                <option id="time-3" value="15_min"><label for="formulario_tiempo">15 min</label></option>
+                <option id="time-4" value="20_min"><label for="formulario_tiempo">20 min</label></option>
+                <option id="time-5" value="25_min"><label for="formulario_tiempo">25 min</label></option>
             </select>
         </p>
         <p id="formulario_vidas" class="p_tiempo_vidas">
             <label for="formulario_vidas"><b>Vidas: </b></label>
             <select name="vidas" class="select_tiempo_vidas">
-                <option value="ilimitado"><label for="formulario_vidas">Ilimitado</label></option>
-                <option value="5"><label for="formulario_vidas">5</label></option>
-                <option value="10"><label for="formulario_vidas">10</label></option>
-                <option value="15"><label for="formulario_vidas">15</label></option>
+                <option id="vida-1" value="ilimitado"><label for="formulario_vidas">Ilimitado</label></option>
+                <option id="vida-2" value="5"><label for="formulario_vidas">5</label></option>
+                <option id="vida-3" value="10"><label for="formulario_vidas">10</label></option>
+                <option id="vida-4" value="15"><label for="formulario_vidas">15</label></option>
             </select>
         </p>
     </form>
