--- a/jugar.html
+++ b/jugar.html
@@ -31,7 +31,7 @@
             <select name="tiempo" class="select_tiempo_vidas">
                 <option id="time-1" value="ilimitado"><label for="formulario_tiempo">Ilimitado</label></option>
                 <option id="time-2" value="10_min"><label for="formulario_tiempo">10 min</label></option>
-                <option id="time-3" value="15_min"><label for="formulario_tiempo">15 min</label></option>
+                <option id="time-3" value="15_min" selected><label for="formulario_tiempo">15 min</label></option>
                 <option id="time-4" value="20_min"><label for="formulario_tiempo">20 min</label></option>
                 <option id="time-5" value="25_min"><label for="formulario_tiempo">25 min</label></option>
             </select>
@@ -41,7 +41,7 @@
             <select name="vidas" class="select_tiempo_vidas">
                 <option id="vida-1" value="ilimitado"><label for="formulario_vidas">Ilimitado</label></option>
                 <option id="vida-2" value="5"><label for="formulario_vidas">5</label></option>
-                <option id="vida-3" value="10"><label for="formulario_vidas">10</label></option>
+                <option id="vida-3" value="10" selected><label for="formulario_vidas">10</label></option>
                 <option id="vida-4" value="15"><label for="formulario_vidas">15</label></option>
             </select>
         </p>
