--- a/jugar.html
+++ b/jugar.html
@@ -49,7 +49,7 @@
 </div>
 <div>
     <p>
-        <button id="botonSiguiente" class="boton"><a class="a" href="jugar-2.html">Siguiente</a></button>
+        <button id="botonJugar" class="boton"><a class="a" href="jugar-2.html">Jugar</a></button>
         <button id="botonVolver" class="boton"><a class="a" href="index.html">Volver a Inicio</a></button>
     </p>
 </div>
